Исправлены мелкие ошибки, пишутся тесты
